Opened 2 years ago
Closed 7 months ago
#18315 closed bug (fixed)
KDL "fbsd callout" realtek wifi (Stray timeout)
Reported by: | smallstepforman | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Drivers/Network/realtekwifi | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #17634 | |
Platform: | All |
Description
KDL "fbsd callout" (see attached image)
boot/system/add-ons/kenel/drivers/dev/net/raltekwifi/callout thread (taskqueue_timout_func)
Laptop was just sitting there while I was doing something else. Happened twice in 48 hours while device not even connected to hot spot (I use wired connection). Both devices work when connected.
Device #0 (USB dongle) realtekwifi/0 RTL8188EUS 802.11n Wireless network adapter, device0x8179 Device #1 (built in) iaxwifi200/0 WiFi6 AX210/AX211/AX411 device0x2725
Haiku x64 hrev56804, 32Gb RAM, all AMD laptop (5800 CPU + R6600M GPU) (4/Mar/2023)
Attachments (1)
Change History (12)
by , 2 years ago
Attachment: | kernel_panic.jpg added |
---|
comment:1 by , 2 years ago
Summary: | KDL "fbsd callout" realtek wifi → KDL "fbsd callout" realtek wifi (Stray timeout) |
---|
comment:3 by , 2 years ago
Component: | Drivers/Network/rtl81xx → Drivers/Network/realtekwifi |
---|---|
Owner: | changed from | to
comment:5 by , 2 years ago
Augustin, just a quick status update. I'm on hrev56861, and for the last 2 days I haven't seen this issue. I'll keep running Haiku all week and let you know by Friday whether it appears again.
comment:6 by , 2 years ago
Hi Augustin. It just crashed while the laptop was idle. BT from KDL:
/boot/system/add-ons/kernel/drivers/dev/net/realtekwifi taskqueue_timeout_func + 0x46 /boot/system/add-ons/kernel/drivers/dev/net/realtekwifi callout_thread + 0x114
This is on hrev56861
comment:8 by , 2 years ago
... on the other hand, re-testing right now may only cause different KDLs, see #18334.
comment:9 by , 2 years ago
comment:11 by , 7 months ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
No reply, presuming fixed as with #17634.
KDL screenshot