freebsd_network: Rework callout_stop implementation.

From the FreeBSD manual pages:
> If the callout is	currently being	serviced and cannot be stopped,
> and at the same time a next invocation of	the same callout is also
> scheduled, then callout_stop() unschedules the next run and returns
> zero.

Previously we would return zero but not unschedule the next run.
This may fix #18315.